home page completed

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -24,6 +24,7 @@
 .navbar-wagon-brand img {
   width: 40px;
   margin-top: 10px;
+  margin-left: 50px;
 }
 
 /* Navbar right section (with form, links, button) */
