--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <!-- / carousel blur -->
 
 
-       <div class="banner" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'at/dive.jpg'%>');">
+       <div class="banner" style="background-image: linear-gradient(210deg, rgba(0,101,168,0.1) 20%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/lights.jpg'%>');">
          <div>
 
             <h1 class='big fadeInRightBig animated'>Academia Translations</h2>
@@ -18,44 +18,53 @@
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <p class='lead lead-lg text-center'>Devil is on the detail, maximise your business potential with a certified interpreter</p>
+                <p class='lead lead-lg text-center'> Language is our thing. At Academia Translations, we combine the best linguists and experts in your field to protect and project your message.
+                </p>
               </div>
             </div>
-            <div class='panels-wrapper'>
+            <div class='panels-wrapper smaller-container'>
               <div class='row panels'>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='#'>
                     <div class='panel-icon'>
-                      <i class='fa fa-clock-o icon'></i>
+                      <i class='fa fa-certificate icon'></i>
                     </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Project planning" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'> 100% Quality </h3>
-                      <p>Language is the instrument of communication, ensure its quality</p>
+                      <h3 class='panel-title'> Bespoke and premium service </h3>
+                      <p> You deal directly with a linguist to ensure translations of the highest possible quality </p>
                     </div>
                   </a>
                 </div>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='#'>
                     <div class='panel-icon'>
-                      <i class='fa fa-cog icon'></i>
+                      <i class='fa fa fa-trophy icon'></i>
                     </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Easy customizable" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Convey the right message</h3>
-                      <p>Etiam init rutrum ligula semper neque relu dapibus, non tempus mauris sodales.est.</p>
+                      <h3 class='panel-title'>The Best of the Best</h3>
+                      <p> Native translators who are members of recognised professional bodies </p>
                     </div>
                   </a>
                 </div>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='#'>
                     <div class='panel-icon'>
-                      <i class='fa fa-rocket icon'></i>
+                      <i class='fa fa-check icon'></i>
                     </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Fastest workers" width="768" height="300" src="http://placehold.it/768x300" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Use the right tools </h3>
-                      <p>Pellentesque id neque sit amet nibh placerat suscipit et a purus, mauris id.</p>
+                      <h3 class='panel-title'> Second line assurance </h3>
+                      <p> Translation review by a second expert linguist </p>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='#'>
+                    <div class='panel-icon'>
+                      <i class='fa fa-comment-o icon'></i>
+                    </div>
+                    <div class='panel-body'>
+                      <h3 class='panel-title'> Translation commentary </h3>
+                      <p> We take you through our choice of terms and style</p>
                     </div>
                   </a>
                 </div>
@@ -67,7 +76,7 @@
                   <i class='fa fa-certificate'></i>
                   <h2>
                     Our top clients
-                    <small>Aliquam placerat, nunc non ullamcorper rutrum, odio urna aliquam dui, a scelerisque purus dui et libero.</small>
+                    <small></small>
                   </h2>
                 </div>
                 <div class='row'>
@@ -75,13 +84,11 @@
                     <div class='client-slideshow cycle-slideshow' data-cycle-carousel-fluid='true' data-cycle-fx='carousel' data-cycle-timeout='2000'>
                       <img alt="" height="90" src='<%= image_path 'at/santander.jpg'%>' />
                       <img alt="" height="70" src='<%= image_path 'at/ceigram.jpg'%>' />
-                      <img alt="" height="90" src='<%= image_path 'at/universidad_autonoma.jpg'%>' />
+                      <img alt="" height="80" src='<%= image_path 'at/universidad_autonoma.jpg'%>' />
 
-                      <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
-                      <img alt="" width="140" height="26" src="http://placehold.it/140x26" />
-                      <img alt="" width="139" height="32" src="http://placehold.it/139x32" />
-                      <img alt="" width="151" height="28" src="http://placehold.it/151x28" />
-                      <img alt="" width="31" height="38" src="http://placehold.it/31x38" />
+                      <img alt="" height="70" src='<%= image_path 'at/Logo_basaldua.jpg'%>' />
+                      <img alt="" height="80" src='<%= image_path 'at/respira.jpg'%>' />
+
                     </div>
                   </div>
                 </div>
