--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,21 +28,21 @@
                     </span>
                    </a>
                   </a>
-
                 </li>
                 <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='services/comming_soon.html'>
+                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='services'>
+                   <a href="/services.html">
                     <span>
                       Services
                     </span>
                   </a>
                 </a>
+                </li>
                 <li class='dropdown'>
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='media.html'>
                     <a href="/media.html">
                     <span>
                       Media
-
                     </span>
                     </a>
                   </a>
