--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,9 +20,9 @@
                       <i class='fa fa-map-marker'></i>
                     </div>
                     <div class='content'>
-                      4567 Street name,
+                      47 South Street
                       <br>
-                      012 12 City name, Country
+                      Isleworth, London TW7 7AA
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -30,26 +30,20 @@
                       <i class='fa fa-phone'></i>
                     </div>
                     <div class='content'>
-                      <a href='tel:+012345678'>+012 345 678</a>
+                      <a href='tel:+012345678'>0044 (0)7769273612</a>
                     </div>
                   </div>
                   <div class='icon-box'>
                     <div class='icon icon-wrap'>
                       <i class='fa fa-envelope'></i>
                     </div>
-                    <div class='content'><a href="mailto:info@bublinastudio.com">info@bublinastudio.com</a></div>
-                  </div>
-                  <div class='icon-box'>
-                    <div class='icon icon-wrap'>
-                      <i class='fa fa-globe'></i>
-                    </div>
-                    <div class='content'><a href="#">www.bublinastudio.com</a></div>
+                    <div class='content'><a href="mailto:info@bublinastudio.com"> info@academiatranslations.com </a></div>
                   </div>
                 </div>
               </div>
               <div class='col-md-3 col-sm-6 info-box'>
                 <h2 class='title'>Newsletter</h2>
-                <p>Proin condimentum, nisi vel vestibulum ultricies, nunc elit.</p>
+                <p> Subscribe to our newsletter!</p>
                 <form action='index.html' class='form-inline form-validation' method='get'>
                   <div class='row'>
                     <div class='form-group control-group col-xs-9 col-md-8 col-lg-9'>
@@ -76,14 +70,8 @@
                   2016
                 </p>
                 <div class='links'>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
-                    <i class='fa fa-twitter text-dark'></i>
-                  </a>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
-                    <i class='fa fa-dribbble text-dark'></i>
-                  </a>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
-                    <i class='fa fa-facebook text-dark'></i>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
+                    <i class='fa fa-linkedin text-dark'></i>
                   </a>
                 </div>
               </div>
