--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,33 +7,60 @@
           </div>
         </div>
 
+        <div class='row'>
+          <div class='col-sm-12'>
+            <div class='page-header page-header-with-icon'>
+              <i class='fa fa-group'></i>
+              <h2>
+              </h2>
+            </div>
+            <div class='profile-boxes'>
+              <div class='row'>
+                <div class='col-sm-12 profile-box'>
+                  <div class='row'>
+                    <div class='col-sm-2 col-sm-offset-4'>
+                      <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.com?Subject=Information%20Request&amp;text=Big+image' title='Olivia Cockburn'>
+                        <i class='fa fa-envelope'></i>
+                        <img alt="Olivia Cockburn" width="165" height="165" src="<%= asset_path 'at/olivia.jpg' %>" />
+                      </a>
+                    </div>
+                    <div class='col-sm-4'>
+                      <h3 class='name'>Olivia Cockburn</h3>
+                      <h4 class='position'>Manager Director</h4>
+                      <p> MA, MA, PhD, MCIL, MITI </p>
+                      <div class='links'>
+                        <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
+                          <i class='fa fa-linkedin'></i>
+                        </a>
+                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.com?Subject=Information%20Request" target="_top">
+                          <i class='fa fa-envelope'></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div id='main-content'>
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <div class='text-center'>
-                  <h2>
-                    WHO WE ARE
-                  </h2>
-                </div>
                 <div class='row'>
                   <div class='col-sm-12'>
                     <p class='lead lead-xs'>
-                    <br/>
-                    <br/>
-                    Academia Translations offers a fast and expert translation service that you can depend upon. <br/>
-                    <br/>
+                    Academia Translations was founded in 2012 by Olivia Cockburn (MA, MA, PhD, MCIL, MITI).
+                     <br/> <br/>
 
-                    Our translators are academics with experience in the field in which they work. We endeavour to not only translate, but also transmit, the message you wish to convey, in the way you wish to do so. <br />
-                    <br/>
+                    With a BA Hons First Degree in Spanish, Latin and Portuguese, Olivia then headed to Spain for her postgraduate training. She completed a Masters Degree in Latin and Spanish Linguistics before moving on to a PhD in Bilingualism and Translation, specialising in Ancient Languages and Romance Linguistics. Whilst researching and lecturing at the Universidad Autónoma de Madrid, Olivia became a Chartered Linguist and full member of the Institute of Translation and Interpreting before deciding to set up Academia Translations. <br/> <br/>
 
+                    With a passion for detail, Olivia heads all translation projects and ensures that they are of the highest possible quality. <br/> <br/>
 
+                    Based in London and with a team of twenty regular translators, Olivia can take on all types of project, from large, long-term publications to urgent press releases with a turn around of a few hours. <br/> <br/>
 
-                    Based in London, Academia Translations offers specialist translations of the highest quality and a personalised service to all our clients. We believe that a profound knowledge of the subject matter and the way language works are essential components to a good translation. <br/>
-                    <br/>
-
-                    Academia Translations' Director, Olivia Cockburn (BA Hons, MA, MA, PhD, MCIL, MITI), is a member of the Classical Association, the American Philological Association, the Institute of Classical Studies, the Anglo-Spanish Society, an elected member of the Philological Society, a full member of the Chartered Institute of Linguists and a qualified member of the Institute of Translation and Interpreting.
-.
+                    At Academia Translations, you deal directly with the linguist. We are unique in offering a truly bespoke and premium translation service.
                     </p>
 
                   </div>
@@ -42,139 +69,19 @@
             </div>
 
 
-            <div class='row'>
-              <div class='col-sm-12'>
-                <div class='page-header page-header-with-icon'>
-                  <i class='fa fa-group'></i>
-                  <h2>
-                    Our team
-                  </h2>
-                </div>
-                <div class='profile-boxes'>
-                  <div class='row'>
-                    <div class='col-sm-6 profile-box'>
-                      <div class='row'>
-                        <div class='col-sm-4'>
-                          <a class='image-link' data-lightbox data-lightbox-gallery='team' href='http://placehold.it/800x800&amp;text=Big+image' title='David Doe'>
-                            <i class='fa fa-envelope'></i>
-                            <img alt="David Doe" width="165" height="165" src="http://placehold.it/165x165" />
-                          </a>
-                        </div>
-                        <div class='col-sm-8'>
-                          <h3 class='name'>Olivia Cockburn</h3>
-                          <h4 class='position'>Manager Director</h4>
-                          <p> Praesent eu placerat enim, vitae condimentum arcu. Aenean ac semper purus.</p>
-                          <div class='links'>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
-                              <i class='fa fa-twitter'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-google-plus'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-facebook'></i>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class='col-sm-6 profile-box'>
-                      <div class='row'>
-                        <div class='col-sm-4'>
-                          <a class='image-link' data-lightbox data-lightbox-gallery='team' href='http://placehold.it/800x800&amp;text=Big+image' title='Jane Doe'>
-                            <i class='fa fa-heart-o'></i>
-                            <img alt="Jane Doe" width="165" height="165" src="http://placehold.it/165x165" />
-                          </a>
-                        </div>
-                        <div class='col-sm-8'>
-                          <h3 class='name'>Jane Doe</h3>
-                          <h4 class='position'>Webdesigner</h4>
-                          <p>Praesent eu placerat enim, vitae condimentum arcu. Aenean ac semper purus.</p>
-                          <div class='links'>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-twitter'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-dribbble'></i>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class='row'>
-                    <div class='col-sm-6 profile-box'>
-                      <div class='row'>
-                        <div class='col-sm-4'>
-                          <a class='image-link' data-lightbox data-lightbox-gallery='team' href='http://placehold.it/800x800&amp;text=Big+image' title='John Doe'>
-                            <i class='fa fa-camera-retro'></i>
-                            <img alt="John Doe" width="165" height="165" src="http://placehold.it/165x165" />
-                          </a>
-                        </div>
-                        <div class='col-sm-8'>
-                          <h3 class='name'>John Doe</h3>
-                          <h4 class='position'>SEO specialist</h4>
-                          <p>Ut et quam at orci eleifend laoreet. Duis in eros eu purus pulvinar fermentum.</p>
-                          <div class='links'>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-twitter'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-skype'></i>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class='col-sm-6 profile-box'>
-                      <div class='row'>
-                        <div class='col-sm-4'>
-                          <a class='image-link' data-lightbox data-lightbox-gallery='team' href='http://placehold.it/800x800&amp;text=Big+image' title='Jessica Doe'>
-                            <i class='fa fa-camera-retro'></i>
-                            <img alt="Jessica Doe" width="165" height="165" src="http://placehold.it/165x165" />
-                          </a>
-                        </div>
-                        <div class='col-sm-8'>
-                          <h3 class='name'>Jessica Doe</h3>
-                          <h4 class='position'>Programmer</h4>
-                          <p>Vivamus et malesuada leo. Duis iaculis in ipsum at tempor. Ut rutrum dolor quis du.</p>
-                          <div class='links'>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-twitter'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-github'></i>
-                            </a>
-                            <a class='btn btn-medium-light btn-sm btn-circle' href='#'>
-                              <i class='fa fa-facebook'></i>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+
 
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='page-header page-header-with-icon'>
                   <i class='fa fa-certificate'></i>
-                  <h2>
-                    Partners
-                  </h2>
                 </div>
                 <div class='row'>
-                  <div class='col-sm-12'>
-                    <div class='client-slideshow cycle-slideshow' data-cycle-carousel-fluid='true' data-cycle-fx='carousel' data-cycle-timeout='2000'>
+                  <div class='col-sm-12 text-center'>
+
                       <img alt="" height="140" src='<%= image_path 'at/chartered.jpg'%>' />
                       <img alt="" height="140" src='<%= image_path 'at/MITI.jpg'%>' />
-                      <img alt="" width="140" height="33" src="http://placehold.it/140x33" />
-                      <img alt="" width="139" height="32" src="http://placehold.it/139x32" />
-                      <img alt="" width="151" height="28" src="http://placehold.it/151x28" />
-                      <img alt="" width="31" height="38" src="http://placehold.it/31x38" />
-                    </div>
+
                   </div>
                 </div>
               </div>
