--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -29,3 +29,14 @@
   margin-left: 100px;
   margin-right: 100px;
 }
+
+.smaller2-container {
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
