--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,7 +34,7 @@
 
   color: white;
   text-align: center;
-  height: 400px;
+  height: 80vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover ;
   // background-position: right 0px bottom -50px;
@@ -60,6 +60,7 @@
   font-size: 30px;
   line-height: 37px;
 }
+
 
 
 .banner-small-no-center {
