--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,7 +47,7 @@
                     </a>
                   </a>
                 </li>
-                <li class='dropdown'>
+                <!-- <li class='dropdown'>
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='blog.html'>
                   <a href="/blog.html">
                     <span>
@@ -55,7 +55,7 @@
                     </span>
                     </a>
                   </a>
-                </li>
+                <!-- </li> -->
               </ul>
             </div>
           </nav>
